syntax = "proto3";
option java_multiple_files = true;
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option java_outer_classname = "FrontGrpcHandlerProto";
package com.bachlinh.order.core.server.grpc;

message InboundMessage {
  string url = 1;
  string method = 2;
  map<string, string> headers = 3;
  string remoteAddress = 4;
  bytes body = 5;
  string requestId = 6;
}

message OutboundMessage {
  int32 status = 1;
  map<string, string> headers = 2;
  bytes body = 3;
}

service GrpcHandler {
  rpc handleGrpcCall(InboundMessage) returns (OutboundMessage);
}